include/opencv_generated.hpp

using namespace cv;
typedef vector<int> vector_int;
VideoCapture* cv_create_VideoCapture();
VideoCapture* cv_create_VideoCapture1(String* filename);
VideoCapture* cv_create_VideoCapture1_0(int device);
VideoWriter* cv_create_VideoWriter();
VideoWriter* cv_create_VideoWriter5(String* filename, int fourcc, double fps, Size* frameSize, bool isColor);
void cv_destroyAllWindows();
void cv_destroyWindow(String* winname);
double cv_VideoCapture_get(VideoCapture* self, int propId);
double cv_getWindowProperty(String* winname, int prop_id);
Mat* cv_imread(String* filename, int flags);
void cv_imshow(String* winname, Mat* mat);
bool cv_imwrite(String* filename, Mat* img, vector_int* params);
bool cv_VideoCapture_isOpened0(VideoCapture* self);
bool cv_VideoWriter_isOpened0_0(VideoWriter* self);
void cv_moveWindow(String* winname, int x, int y);
void cv_namedWindow(String* winname, int flags);
bool cv_VideoCapture_read(VideoCapture* self, Mat* image);
void cv_VideoCapture_release0_0(VideoCapture* self);
bool cv_VideoCapture_set(VideoCapture* self, int propId, double value);
void cv_setWindowProperty(String* winname, int prop_id, double prop_value);
int cv_waitKey(int delay);
void cv_VideoWriter_write(VideoWriter* self, Mat* image);